@@ -21,8 +21,6 @@ package org.yabause.android;
 
 import java.util.TreeSet;
 
-import android.annotation.TargetApi;
-import android.os.Build;
 import android.util.Log;
 import android.view.ActionMode;
 import android.view.Menu;
@@ -32,7 +30,6 @@ import android.widget.AbsListView.MultiChoiceModeListener;
 
 import org.yabause.android.SaveListAdapter;
 
-@TargetApi(Build.VERSION_CODES.HONEYCOMB)
 public class SaveListModeListener implements MultiChoiceModeListener {
 
     private SaveListAdapter adapter;
@@ -50,9 +47,9 @@ public class SaveListModeListener implements MultiChoiceModeListener {
         // such as update the title in the CAB
 
         if (checked) {
-            selection.add(Long.valueOf(id));
+            selection.add(new Long(id));
         } else {
-            selection.remove(Long.valueOf(id));
+            selection.remove(new Long(id));
         }
 
         mode.setTitle("" + selection.size());
